# Course_system

./: .gitignore  api_response.json  auth_service.py  course_system_2025-10-16_12-34-47_mysql_data_eyuOv.sql
Nginx/: fullchain.pem  privkey.key
backend/: .env.template  .gitignore  README.md  main.py  requirements.txt
backend/app/: __init__.py  router.py
backend/common/: log.py  model.py  pagination.py  schema.py
backend/core/: conf.py  config.py  path_conf.py  registrar.py
backend/database/: db_redis.py
backend/middleware/: access_middleware.py  jwt_auth_middleware.py  license_middleware.py  opera_log_middleware.py  state_middleware.py
backend/sapper_license/: license_code  public_key.pem
backend/sql/: virtual_teacher.sql  virtual_teacher_table.sql
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
server/: .env.template  .gitignore  README.md  fullchain.pem  key.env  main.py  privkey.key
server/public_tech_lib/: client.py  package-lock.json  pyproject.toml  servers_config.json
server/public_tech_lib/file_processing_service/: __init__.py  file_processing.py
server/public_tech_lib/file_processing_service/third_party_lib/docling/: DoclingServer.py  __init__.py
server/public_tech_lib/mcp_service/: __main__.py  config.py  server.py
server/public_tech_lib/mcp_service/base_module/: base.py
server/public_tech_lib/mcp_service/model_module/: server.py
server/public_tech_lib/mcp_service/model_module/base_module/: base.py
server/public_tech_lib/mcp_service/model_module/function_moudle/llm_call/: openai_.py
(+772 files in other folders)
