[project]
name = "public-tech-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.5",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7.2,<3.0.0",
    "starlette>=0.27",
    "sse-starlette>=1.6.1",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.23.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "langchain-community==0.3.20",
    "tiktoken==0.9.0",
    "openai==1.67.0",
    "docling==2.28.0",
    "docling_core==2.23.3",
    "deepsearch_glm==1.0.0",
    "pymupdf==1.25.4",
    "loguru==0.1.0",
    "mcp"
]
